# codepet

./: .gitignore  AGENTS.md  CLAUDE.md  README.en.md  README.md  feature_list.json  index.html  init.sh  package-lock.json  package.json  progress.md  project-rules.md  session-handoff.md  vite.config.ts
.claude/: settings.json
.claude/hooks/: check-arch.sh  protect-files.sh
.claude/memory/: MEMORY.md  agent-behavior-prefs.md  architecture-contract.md  harness-workflow.md  project-scope.md  session-end-procedure.md  verification-before-completion.md
.github/workflows/: ci.yml
docs/: architecture-design.md  requirements.md  system-design.md  test-plan.md  user-manual.md
lint/: check-architecture.sh
scripts/: poarc-init.sh
src/: App.css  App.tsx  ErrorBoundary.tsx  main.tsx
src-tauri/: Cargo.toml  default_soul.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  crash.rs  errors.rs  keyboard.rs  lib.rs  llm.rs  logging.rs  main.rs  settings.rs  shutdown.rs  tray.rs  window_manage.rs
src/__tests__/: animationEngine.test.ts  ascii.test.ts  chatStore.test.ts  f1_comprehensive.test.ts  petStore.test.ts  renderer.test.ts  robustness.test.ts  sound.test.ts
src/canvas/: animationEngine.ts  animations.ts  ascii.ts  renderer.ts
src/components/: BugDropZone.tsx  ChatOverlay.tsx  ChatPanel.tsx  ContextMenu.tsx  PetCanvas.tsx  PetCustomizer.tsx  ReminderToast.tsx  SettingsPanel.tsx  SpeechBubble.tsx  ZhurongAvatar.tsx
src/data/: petPresets.ts  roasts.ts  skins.ts
src/hooks/: useAutoHide.ts  useKeyboardActivity.ts  (+3 more)
(+28 files in other folders)
